Fix header on small screens.

--- a/client/src/styles/modules/_LoginHeader.scss
+++ b/client/src/styles/modules/_LoginHeader.scss
@@ -10,6 +10,10 @@
     h3 {
       margin-bottom: 0;
       letter-spacing: 1px;
+
+      @media screen and (max-width: 39.9375em) {
+        font-size: 1.9375rem;
+      }
     }
   }
 
